cmake_minimum_required(VERSION 3.16.3)
project(img_acq_testing)
find_package(OpenCV REQUIRED)
find_package(ZLIB REQUIRED)
set(XLSXWRITER_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/libxlsxwriter)
set(VIMBA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/VimbaX_2023-1)
add_executable(img_acq_testing main.cpp)
target_compile_options(img_acq_testing PRIVATE -std=c++17 -ggdb3)
include_directories(${OpenCV_INCLUDE_DIRS})
target_include_directories(img_acq_testing PRIVATE ${XLSXWRITER_LIB}/include ${VIMBA_DIR}/api/include)
target_link_libraries(img_acq_testing PRIVATE ${XLSXWRITER_LIB}/cmake/libxlsxwriter.a ${ZLIB_LIBRARIES} ${VIMBA_DIR}/api/lib/libVmbCPP.so ${OpenCV_LIBS})